# FluidSim

./: .clang-format  CMakeLists.txt  README.md  run.sh
src/: fluid_grid.cpp  fluid_grid.h  main.cpp  renderer.cpp  renderer.h
